# xeus-python-wheel

./: .appveyor.yml  .gitignore  .travis.yml  0001-Problem-Missing-ZeroMQ_INCLUDE_DIR-when-only-static-.patch  CMakeLists.txt  CMakeLists.txt.orig  External_OpenSSL.cmake.in  External_libsodium.cmake.in  External_libuuid.cmake.in  External_zlib.cmake.in  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  setup.py  xpython_launcher.py  xrobot_launcher.py
.github/workflows/: build_wheel.yml
SuperBuild/: External_zlib.cmake
cmake/: FindOpenSSL.cmake  wheelConfig.cmake.in
kernels/xpython/: kernel.json.in
kernels/xpython-raw/: kernel.json.in
kernels/xrobot/: kernel.json.in
scripts/: build-osx-wheel.sh  build-wheels.sh
test/: test_notebook.ipynb  test_notebook_raw.ipynb
travis/: build-osx-wheel.sh  build-wheels.sh
xpython/: __init__.py
xrobot/: __init__.py
